Icon animation extra spacing fix

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -500,6 +500,9 @@ footer {
         padding-top: 130px;
         padding-bottom: 100px;
         }
+        .img { 
+        margin-top: 50px;
+        }
     }
     
     .jumbotron > .container-fluid > .col-md-6 > p > a {
